--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -1,17 +1,3 @@
-.homepage {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px 80px;
-}
-
-.directory-menu {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
 .menu-item {
   min-width: 30%;
   height: 240px;
@@ -21,6 +7,23 @@
   justify-content: center;
   border: 1px solid black;
   margin: 0 7.5px 15px;
+  overflow: hidden;
+  &:hover{
+    cursor:pointer;
+  
+    & .backgroung-image {
+      transform: scale(1.1);
+      transition: 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
+      
+    }
+    & .content  {
+      opacity: 0.9;
+    }
+  }
+
+  &.large {
+    height: 380px;
+  }
 
   &:first-child {
     margin-right: 7.5px;
@@ -30,14 +33,26 @@
     margin-left: 7.5px;
   }
 
+.backgroung-image {
+  width: 100%;
+  height: 100%;
+  background-position: center;
+  background-size: cover;
+}
+
   .content {
     height: 90px;
     padding: 0 25px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: whitesmoke;
+    opacity: 0.7;
     justify-content: center;
     border: 1px solid black;
+    position: absolute;
+
+
 
     .title {
       font-weight: bold;
@@ -52,3 +67,4 @@
     }
   }
 }
+
