--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
 body {
     font-family: 'Montserrat', sans-serif;
+    padding: 20px 80px;
+}
+a{
+    text-decoration: none;
+    color: black;
 }
