--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -5,10 +5,12 @@
   height: 350px;
   align-items: center;
   overflow: hidden;
+  position: relative;
   
   &:hover{
     cursor:pointer;
   
+
     & .image {
       transform: scale(1.05);
       transition: 2s cubic-bezier(0.25, 0.45, 0.45, 0.95);
@@ -16,7 +18,28 @@
     }
   }
 
+  .custom-button {
+    width: 80%;
+    opacity:0.7;
+    position: absolute;
+    top: 255px;
+    font-size: 0.7rem;
+    display: none;
 
+
+  }
+  &:hover{
+    .image{
+      opacity: 0.8;
+      transition: opacity 2s ease-in-out(0.25,0.45,0.45,0.95);
+  
+    }
+    .custom-button{
+      transition: opacity 2s ease-in-out(0.25,0.45,0.45,0.95);
+      opacity: 0.85;
+      display:flex;
+    }
+  }
   .image {
     width: 100%;
     height: 95%;
