--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -11,19 +11,22 @@
   right: 40px;
   z-index: 5;
 
+
+  .empty-message {
+    font-size: 1.1rem;
+    margin: 50px auto;
+  }
+
   .cart-items {
     height: 240px;
     display: flex;
     flex-direction: column;
-    overflow: hidden;
+    overflow-y: auto;
+    
   }
 
   button {
     margin-top: auto;
     font-size: 0.8rem;
   }
-}
-.empty-message {
-  font-size: 1.1rem;
-  margin: 50px auto;
 }
