--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -1,11 +1,12 @@
 .collection-item {
-  width: 22%;
+  width: 20vw;
   display: flex;
   flex-direction: column;
   height: 350px;
   align-items: center;
   overflow: hidden;
   position: relative;
+  margin: 0 7.5px 15px;
   
   &:hover{
     cursor:pointer;
